# prime-rl

./: .gitignore  CHANGELOG.md  Dockerfile.cuda  pyproject.toml
.github/workflows/: benchmarks.yaml
benchmarks/baselines/: benchmark-1xa6000-Qwen--Qwen3-0.6B-rl-16-1gpu-Recompute-flash_attention_2-16384.json  benchmark-1xa6000-Qwen--Qwen3-0.6B-rl-16-1gpu-Recompute-flash_attention_2-65536.json  benchmark-1xa6000-Qwen--Qwen3-0.6B-rl-full-1gpu-Recompute-flash_attention_2-16384.json  benchmark-1xa6000-Qwen--Qwen3-0.6B-rl-full-1gpu-Recompute-flash_attention_2-65536.json  benchmark-1xa6000-Qwen--Qwen3-0.6B-sft-full-1gpu-Recompute-flash_attention_2-8192.json  benchmark-1xa6000-Qwen--Qwen3-4B-Instruct-2507-rl-16-1gpu-Recompute-flash_attention_2-16384.json  benchmark-1xh100-Qwen--Qwen3-0.6B-rl-16-1gpu-Offload-flash_attention_3-65536.json  benchmark-1xh100-Qwen--Qwen3-0.6B-rl-16-1gpu-Recompute-flash_attention_3-16384.json  benchmark-1xh100-Qwen--Qwen3-0.6B-rl-16-1gpu-Recompute-flash_attention_3-65536.json  benchmark-1xh100-Qwen--Qwen3-0.6B-rl-full-1gpu-Offload-flash_attention_3-65536.json  benchmark-1xh100-Qwen--Qwen3-0.6B-rl-full-1gpu-Recompute-flash_attention_3-16384.json  benchmark-1xh100-Qwen--Qwen3-0.6B-rl-full-1gpu-Recompute-flash_attention_3-65536.json  benchmark-1xh100-Qwen--Qwen3-0.6B-sft-full-1gpu-Recompute-flash_attention_3-16384.json  benchmark-1xh100-Qwen--Qwen3-0.6B-sft-full-1gpu-Recompute-flash_attention_3-65536.json  benchmark-1xh100-Qwen--Qwen3-0.6B-sft-full-1gpu-Recompute-flash_attention_3-8192.json  benchmark-1xh100-Qwen--Qwen3-4B-Instruct-2507-rl-16-1gpu-Offload-flash_attention_3-16384.json  benchmark-1xh100-Qwen--Qwen3-4B-Instruct-2507-rl-16-1gpu-Offload-flash_attention_3-65536.json  benchmark-1xh100-Qwen--Qwen3-4B-Instruct-2507-rl-16-1gpu-Recompute-flash_attention_3-16384.json  benchmark-1xh100-Qwen--Qwen3-4B-Instruct-2507-rl-16-1gpu-Recompute-flash_attention_3-65536.json  benchmark-8xb200-PrimeIntellect--INTELLECT-3-rl-16-8gpu-Offload-flash_attention_2-65536.json  benchmark-8xb200-PrimeIntellect--INTELLECT-3-rl-16-8gpu-Recompute-flash_attention_2-16384.json  benchmark-8xb200-PrimeIntellect--INTELLECT-3-rl-16-8gpu-Recompute-flash_attention_2-65536.json  benchmark-8xb200-Qwen--Qwen3-235B-A22B-Instruct-2507-rl-16-8gpu-Offload-flash_attention_2-16384.json  benchmark-8xb200-Qwen--Qwen3-235B-A22B-Instruct-2507-rl-16-8gpu-Offload-flash_attention_2-65536.json  benchmark-8xb200-Qwen--Qwen3-235B-A22B-Instruct-2507-rl-16-8gpu-Recompute-flash_attention_2-16384.json  benchmark-8xb200-Qwen--Qwen3-235B-A22B-Instruct-2507-rl-16-8gpu-Recompute-flash_attention_2-65536.json  benchmark-8xb200-Qwen--Qwen3-30B-A3B-Instruct-2507-rl-16-8gpu-Recompute-flash_attention_2-16384.json  benchmark-8xb200-Qwen--Qwen3-30B-A3B-Instruct-2507-rl-16-8gpu-Recompute-flash_attention_2-65536.json  benchmark-8xb200-Qwen--Qwen3-30B-A3B-Instruct-2507-rl-full-8gpu-Recompute-flash_attention_3-16384.json  benchmark-8xb200-Qwen--Qwen3-30B-A3B-Instruct-2507-rl-full-8gpu-Recompute-flash_attention_3-65536.json  benchmark-8xb200-Qwen--Qwen3-30B-A3B-Instruct-2507-sft-full-8gpu-Recompute-flash_attention_3-16384.json  benchmark-8xb200-Qwen--Qwen3-4B-Instruct-2507-rl-16-8gpu-Recompute-flash_attention_2-16384.json  (+27 more)
benchmarks/results/: BENCHMARKS.md
docs/: deployment.md  index.md  kubernetes.md  logging.md  metrics.md  mint.json
k8s/: README.md
(+57 files in other folders)
